components/platform/opensearch/base/cilium-networkpolicy-job.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: zylos-opensearch-bootstrap-job-cnp
  namespace: zylos-data-opensearch
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/component: bootstrap
      app.kubernetes.io/name: catalog-opensearch
  egress:
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: opensearch
      toPorts:
        - ports:
            - port: "9200"
              protocol: TCP
