components/platform/opensearch/base/cilium-networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: zylos-opensearch-cnp
  namespace: zylos-data-opensearch
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: opensearch
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: opensearch
      toPorts:
        - ports:
            - port: "9200"
              protocol: TCP
            - port: "9300"
              protocol: TCP

    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/component: bootstrap
            app.kubernetes.io/name: catalog-opensearch
      toPorts:
        - ports:
            - port: "9200"
              protocol: TCP

    - fromEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": zylos-catalog
      toPorts:
        - ports:
            - port: "9200"
              protocol: TCP

  egress:
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: opensearch
      toPorts:
        - ports:
            - port: "9200"
              protocol: TCP
            - port: "9300"
              protocol: TCP
